add route model
